--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 streamlit
 boto3
-botocore
 requests
-pandas
-python-docx
-reportlab
-PyMuPDF
-Pillow
 python-dotenv
-openai>=1.30.0
-langchain-core>=0.2.0
-langchain-openai>=0.1.7
-langgraph>=0.2.30
-typing_extensions>=4.9.0
-pydantic>=2.7.0
-schedule
+Pillow
+PyMuPDF
+python-docx
+pandas
+reportlab
+openai
+langchain-core
+langchain-openai
+langgraph
+sqlite3
+pathlib
+asyncio
